<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/x"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <TextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/weather"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/search_city"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/city"
            app:layout_constraintStart_toStartOf="@+id/city"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.236" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:width="0dp"

            android:background="@drawable/round"
            android:backgroundTint="#601919"
            android:text="@string/search"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:circularflow_radiusInDP="999dp"
            app:cornerRadius="999dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/input"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.243" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        app:cardBackgroundColor="#9A020202"
        app:cardCornerRadius="50dp"
        app:cardElevation="50dp">

        <ImageView
            android:id="@+id/iconImg"
            android:layout_width="397dp"
            android:layout_height="59dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="500dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="@+id/temp"
            app:layout_constraintStart_toStartOf="@+id/temp"
            app:layout_constraintTop_toBottomOf="@+id/temp"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/iconImg"
            app:layout_constraintStart_toStartOf="@+id/iconImg"
            app:layout_constraintTop_toBottomOf="@+id/iconImg" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/humidity"
            app:layout_constraintEnd_toEndOf="@+id/description"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/description" />


        <TextView
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="330dp"
            android:layout_marginBottom="0dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/wind"
            app:layout_constraintHorizontal_bias="0.576"
            app:layout_constraintStart_toStartOf="@+id/wind" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/input"
            app:layout_constraintStart_toStartOf="@+id/input"
            app:layout_constraintTop_toBottomOf="@+id/input" />


    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="175dp"
        android:layout_height="162dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="5000dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/fuck_android_studio"
        app:layout_constraintBottom_toTopOf="@+id/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_launcher_foreground" />


</LinearLayout>